--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/jmsoper/node-twitter-bot/issues"
   },
-  "homepage": "https://github.com/jmsoper/node-twitter-bot#readme"
+  "homepage": "https://github.com/jmsoper/node-twitter-bot#readme",
+  "dependencies": {
+    "http": "0.0.0",
+    "twit": "^2.2.5",
+    "url": "^0.11.0"
+  }
 }
